--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,12 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
+            "fileReplacements": [
+              {
+                "replace": "src/app/environments/environment.ts",
+                "with": "src/app/environments/environment.prod.ts"
+              }
+            ],
             "assets": [
               {
                 "glob": "**/*",
