--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@ngneat/overview": "^6.0.0",
     "@ngxpert/hot-toast": "^3.0.1",
     "express": "^4.18.2",
-    "json-server": "^1.0.0-beta.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -35,6 +34,7 @@
     "@angular-devkit/build-angular": "^18.2.4",
     "@angular/cli": "^18.2.4",
     "@angular/compiler-cli": "^18.2.0",
+    "@ngx-env/builder": "^19.0.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
